# FacialRecognition

./: README.md
DB copy/: CMakeLists.txt  DataBase.cpp  DataBase.h  README.md  main.cpp  readme.txt
ErrorHandling/: ErrorHandling.h  README.md
Extractor/: CMakeLists.txt
Extractor/includes/: Extract.h  FaceAligner.h  FaceDetector.h  FaceFeaturesExtractor.h
Extractor/src/: Extract.cpp  FaceAligner.cpp  FaceDetector.cpp  FaceFeaturesExtractor.cpp  test.cpp
FaceAlignment/: CMakeLists.txt  README.md
FaceAlignment/includes/: ErrorHandling.h  FaceAligner.h
FaceAlignment/src/: FaceAligner.cpp  test.cpp
FaceDetector/: ErrorHandling.h  FaceDetector.cpp  FaceDetector.h  Info.plist  README.md  main.cpp
FaceDetector/ejemplo/: FaceDetector.cpp  FaceDetector.h  main.cpp
FaceDetector/ejemplo.xcodeproj/: project.pbxproj
FaceDetector/ejemplo.xcodeproj/project.xcworkspace/xcuserdata/Chrisdal97.xcuserdatad/: UserInterfaceState.xcuserstate
FaceEnrollment/: CMakeLists.txt  ErrorHandling.h  FaceEnrollment.cpp  FaceEnrollment.h  README.md  main.cpp
FaceFeaturesExtraction/: README.md  main.cpp
FaceIde/: CMakeLists.txt  DataBase.h  ErrorHandling.h  FaceIdentification.cpp  FaceIdentification.h  database.cpp  main.cpp
FaceVerification/: CMakeLists.txt
FaceVerification/includes/: DataBase.h  ErrorHandling.h  FaceFeaturesExtractor.h  FaceVerification.h
FaceVerification/src/: DataBase.cpp  FaceFeaturesExtractor.cpp  FaceVerification.cpp
GUI/: main.cpp
